<resources>
    <string name="app_name">capstone</string>
    <string name="msg_mari_mulai_men">Mari Mulai  Menghadiri Event  Yang Kau Suka</string>
    <string name="lbl_tempat_event">Tempat Event</string>
    <string name="lbl_other">Other</string>
    <string name="msg_event_yang_seda">Event yang sedang berlangsung</string>
    <string name="msg_talkshow_entrep">Talkshow Entrepreneurship</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_cari_event">Cari Event...</string>
    <string name="lbl_jalan_sehat">jalan Sehat</string>
    <string name="msg_register_new_ac">Register New Account</string>
    <string name="msg_jalan_sehat_1">Jalan Sehat : 10th Dies Natalis Teknik Geofisika ITS</string>
    <string name="lbl_detail_event">Detail Event</string>
    <string name="lbl_remember_me">Remember Me</string>
    <string name="msg_confirm_your_pa">Confirm Your Password</string>
    <string name="lbl_full_name">Full Name</string>
    <string name="lbl_buat_event"> + Buat Event</string>
    <string name="msg_please_enter_valid_pa">Please enter valid password</string>
    <string name="msg_please_enter_valid_email">Please enter valid email</string>
    <string name="msg_please_enter_valid_text">Please enter valid text</string>
    <string name="msg_tambahkan_eve"> + Tambahkan Event</string>
    <string name="lbl_pameran">Pameran</string>
    <string name="lbl_buat_event2">Buat Event</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_rayanza">Rayanza</string>
    <string name="msg_mari_mulai_jela">Mari Mulai Jelajahi Event</string>
    <string name="lbl_olahraga">Olahraga</string>
    <string name="lbl_google">Google</string>
    <string name="msg_pilih_favorit">Pilih Favorit Event Mu</string>
    <string name="msg_hilangkan_stres">Hilangkan Stress dan Beban Pikiran  Anda Dengan Berlibur Bersama Kami</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_sign_up2">SIGN UP</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="lbl_login2">Login</string>
    <string name="lbl_log_in">Log In</string>
    <string name="msg_sign_in_to_your">Sign in to your account</string>
    <string name="lbl_username">Username</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="msg_or_continue_wit">Or Continue With</string>
    <string name="msg_kami_akan_merek">Kami Akan Merekomendasikan Event Berdasarkan Favoritmu</string>
    <string name="lbl_kuliner">Kuliner</string>
    <string name="lbl_budaya">Budaya</string>
    <string name="lbl_konser">Konser</string>
    <string name="lbl_selesai">Selesai</string>
    <string name="lbl_nama_event">Nama Event</string>
    <string name="lbl_tanggal_event">Tanggal Event</string>
    <string name="lbl_poster_event">Poster Event</string>
    <string name="msg_upload_poster_e">Upload Poster Event</string>
    <string name="lbl_genre">Genre</string>
    <string name="lbl_caption_event">Caption Event</string>
</resources>