<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegistrasi"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:gravity="start"
            android:id="@+id/imageLogoIcon"
            android:layout_height="@dimen/_273pxv"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_logoicon_273x360}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_logoicon_273x360"/>

        <LinearLayout
            android:id="@+id/linearColumnsignup"
            android:layout_width="match_parent"
            android:layout_height="395dp"
            android:layout_marginStart="@dimen/_69pxh"
            android:layout_marginTop="@dimen/_25pxv"
            android:layout_marginEnd="@dimen/_60pxh"
            android:layout_marginBottom="@dimen/_98pxv"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSignUp"
                style="@style/txtPoppinssemibold24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginEnd="@dimen/_17pxh"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@{registrasiVM.registrasiModel.txtSignUp}"
                tools:text="@string/lbl_sign_up" />

            <EditText
                android:id="@+id/etFormFullname"
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_27pxv"
                android:background="@drawable/rectangle_bg_bluegray_100_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_full_name"
                android:inputType="text"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={registrasiVM.registrasiModel.etFormFullnameValue}"
                android:textColorHint="@color/bluegray_400"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/etFormEmail"
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:background="@drawable/rectangle_bg_bluegray_100_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/lbl_email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={registrasiVM.registrasiModel.etFormEmailValue}"
                android:textColorHint="@color/bluegray_400"
                tools:ignore="Autofill" />

            <FrameLayout
                android:id="@+id/frameStackpassword"
                android:layout_width="@dimen/_231pxh"
                android:layout_height="@dimen/_47pxv"
                android:layout_marginTop="@dimen/_15pxv">

                <TextView
                    android:id="@+id/txtPassword"
                    style="@style/txtInterregular14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_31pxh"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrasiVM.registrasiModel.txtPassword}"
                    tools:text="@string/lbl_password" />

                <EditText
                    android:id="@+id/etFormPassword"
                    style="@style/etSolidRoundedOutline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:background="@drawable/rectangle_bg_bluegray_100_border_black_900_radius_10"
                    android:ellipsize="end"
                    android:hint="@string/lbl_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_14pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingBottom="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@={registrasiVM.registrasiModel.etFormPasswordValue}"
                    android:textColorHint="@color/bluegray_400"
                    tools:ignore="Autofill" />
            </FrameLayout>

            <EditText
                android:id="@+id/etFormConfirmPa"
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14pxv"
                android:background="@drawable/rectangle_bg_bluegray_100_border_black_900_radius_10"
                android:ellipsize="end"
                android:hint="@string/msg_confirm_your_pa"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@={registrasiVM.registrasiModel.etFormConfirmPaValue}"
                android:textColorHint="@color/bluegray_400"
                tools:ignore="Autofill" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUpOne"
                style="@style/btnSolidRounded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_21pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_sign_up2"
                android:textAllCaps="false"
                tools:text="@string/lbl_sign_up2" />

            <LinearLayout
                android:id="@+id/linearRowconfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_17pxh"
                android:layout_marginTop="@dimen/_22pxv"
                android:layout_marginEnd="@dimen/_17pxh"
                android:gravity="start"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtConfirmation"
                    style="@style/txtIntermedium12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.82"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrasiVM.registrasiModel.txtConfirmation}"
                    tools:text="@string/msg_already_have_an" />

                <TextView
                    android:id="@+id/txtLogin"
                    style="@style/txtIntermedium12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.18"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{registrasiVM.registrasiModel.txtLogin}"
                    tools:text="@string/lbl_login2" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>