<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout android:id="@+id/frameCreateEvent"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearColumnarrowtwo"
            android:layout_gravity="center"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_18pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_26pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearRowarrowtwo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <ImageView android:id="@+id/imageArrowTwo"
                        android:layout_height="@dimen/_3pxh"
                        android:layout_marginBottom="@dimen/_12pxv"
                        android:layout_marginTop="@dimen/_14pxv"
                        android:layout_width="@dimen/_26pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_arrow2"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_arrow2"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtBuatEvent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_77pxh"
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{createEventVM.createEventModel.txtBuatEvent}"
                        style="@style/txtPoppinsmedium20" tools:text="@string/lbl_buat_event2"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:id="@+id/txtNamaEvent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_39pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{createEventVM.createEventModel.txtNamaEvent}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_nama_event"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_100_border_light_blue_400_radius_3"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyNine"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={createEventVM.createEventModel.etRectangleTwentyNineValue}"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTempatEvent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{createEventVM.createEventModel.txtTempatEvent}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_tempat_event"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_100_border_light_blue_400_radius_3"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyNineOne"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={createEventVM.createEventModel.etRectangleTwentyNineOneValue}"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtTanggalEvent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{createEventVM.createEventModel.txtTanggalEvent}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_tanggal_event"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_100_border_light_blue_400_radius_3"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyNineTwo"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={createEventVM.createEventModel.etRectangleTwentyNineTwoValue}"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtPosterEvent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{createEventVM.createEventModel.txtPosterEvent}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_poster_event"/>
            <FrameLayout android:id="@+id/frameStackvector"
                android:layout_height="@dimen/_42pxv"
                android:layout_marginTop="@dimen/_14pxv" android:layout_width="@dimen/_324pxh">
                <FrameLayout android:id="@+id/frameAuthField"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_42pxv"
                    android:layout_width="@dimen/_324pxh" style="@style/groupStylegray_100cornerRadius">
                    <ImageView android:id="@+id/imageVector"
                        android:layout_gravity="end"
                        android:layout_height="@dimen/_20pxh"
                        android:layout_marginBottom="@dimen/_11pxv"
                        android:layout_marginEnd="@dimen/_14pxh"
                        android:layout_marginStart="@dimen/_14pxh"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="@dimen/_20pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_vector_black_900"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_vector_black_900"/>
                </FrameLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtUploadPosterE"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{createEventVM.createEventModel.txtUploadPosterE}"
                    style="@style/txtPoppinsregular14_1" tools:text="@string/msg_upload_poster_e"/>
            </FrameLayout>
            <TextView android:ellipsize="end" android:id="@+id/txtGenre"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{createEventVM.createEventModel.txtGenre}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_genre"/>
            <EditText
                android:background="@drawable/rectangle_bg_gray_100_border_light_blue_400_radius_3"
                android:ellipsize="end"
                android:id="@+id/etRectangleTwentyNineThree"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@={createEventVM.createEventModel.etRectangleTwentyNineThreeValue}"
                style="@style/etSolidRoundedOutline_1" tools:ignore="Autofill"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCaptionEvent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{createEventVM.createEventModel.txtCaptionEvent}"
                style="@style/txtPoppinsregular14" tools:text="@string/lbl_caption_event"/>
            <View
                android:background="@drawable/rectangle_bg_gray_100_border_light_blue_400_radius_3"
                android:id="@+id/viewRectangleTwentyNineFour"
                android:layout_height="@dimen/_128pxv"
                android:layout_marginTop="@dimen/_10pxv" android:layout_width="@dimen/_324pxh"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnSelesai"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_46pxh"
                android:layout_marginStart="@dimen/_46pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_14pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_14pxv"
                android:singleLine="true"
                android:text="@string/lbl_selesai"
                android:textAllCaps="false"
                style="@style/btnSolidRounded_4" tools:text="@string/lbl_selesai"/>
        </LinearLayout>
    </FrameLayout>
</layout>